2009-07-29  Dominique Dumont  <dominique.dumont@hp.com> v1.207

	* t/ssh_config.t: When run as root, skip the tests that must be
	run as regular user. (Fix Debian FTBS)

	* lib/Config/Model/models/Ssh/HostElement.pl: Fix model error:
	ServerAliveInterval is an integer, not a boolean

2009-06-24  Dominique Dumont  <domi.dumont@free.fr> v1.206

	* Build.PL: added forgotten dependency on
	Parse::RecDescent. Depends on Config::Model 0.637

2009-06-23  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/models/**.pl: replaced deprecated 'built_in'
	model parameter with 'upstream_default'. The trick is to run
	"config-model-edit -model Ssh -save" (from Config::Model::Itself)
	and that's it.

2009-04-11  Dominique Dumont  <domi.dumont@free.fr> v1.205

	* lib/Config/Model/OpenSsh.pm (read_ssh_file): fix bug that breaks
	with Config::Model 0.635

2009-03-09  Dominique Dumont  <dominique.dumont@hp.com> v1.204

	* t/ssh_config.t: Removed unused options that broke with
	Config::Model 0.634

	* config-edit-ssh: Update documentation

2009-02-03  Dominique Dumont  <dominique.dumont@hp.com> v1.203

	* t/augeas_*.t: Do the exec only if Augeas part can be tested. Use
	$^X in exec instead of 'perl'. This should also fix tests in CPAN.

2009-02-02  Dominique Dumont  <dominique.dumont@hp.com> v1.202

	* t/augeas*.t : Changed Augeas locale workaround to reduce the
	number of test failures in CPAN tests.

2009-01-29  Dominique Dumont  <dominique.dumont@hp.com> v1.201

	* config-edit-sshd: added workaround Augeas locale bug

	* Sshd files: Major bug fixes for Augeas integration

	* lib/Config/Model/OpenSsh.pm (read_ssh_file): Fix:  Host names 
	  are separated by white spaces and not comma

2008-11-16  Domi  <domi@bilbo.maison> 

	* lib/Config/Model/models/Sshd.pl: Added write through Augeas so
	comment in /etc/ssh/sshd_config can be preserved (requires Augeas and 
	Config::Model::Backend::Augeas)
	
	* config-edit-ssh: new command line to edit ~/.ssh/config file (as